@@ -1,5 +1,7 @@
 1999-08-09  Dan Espen  <dane@mk.telcordia.com>
 
+	* Added generated directory and the 2 generation shells.
+
 	* Moved screenshots into a subdirectory,
 	fixed bad filename for the Windowmaker thumbnail filename.
 
